# ollama-benchmark-lab

./: .gitignore  Ollama Benchmark Research — Interim Analysis Report.md  build_models.sh  config.json  download_models.sh  generate_modelfiles.sh  healthcheck.sh  history  id_ed25519  id_ed25519.pub  llm_contracts.yaml  ollama_benchmark_clean.sh  ollama_benchmark_research.sh  ollama_report.md  ollama_stats.csv  repair.sh  router.py  router_metrics.json
modelfiles/: Modelfile.base  (+23 more)
ollama-benchmark-lab/: .coverage  .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  benchmark_config.json  cli.pyi  find_imports.py  pyproject.toml  task_schema.json
ollama-benchmark-lab/analysis/: bootstrap.py  failure_taxonomy.py  ranking.py
ollama-benchmark-lab/autollama/: cli.py
ollama-benchmark-lab/benchmark/: __init__.py  checkpoint.py  checkpoint.pyi  cli.py  evaluator.py  evaluator.pyi  loader.py  models.py  ollama_client.py  ollama_client.pyi  patch_runner.py  profiler.py  profiling.py  runner.py  runner.pyi  state.py  utils.py  watchdog.py
ollama-benchmark-lab/benchmark/adversarial/: generator.py  generator.pyi  patch_mutation.py  patch_mutation.pyi
ollama-benchmark-lab/benchmark/analytics/: engine.py  engine.pyi  failure_clustering.py  failure_clustering.pyi  model_compare.py  model_compare.pyi  normalizer.py  normalizer.pyi  regression_tracker.py  regression_tracker.pyi
ollama-benchmark-lab/benchmark/cluster/: ray_worker.py  ray_worker.pyi  scheduler.py  scheduler.pyi
ollama-benchmark-lab/benchmark/data/: swebench_loader.py  swebench_loader.pyi
ollama-benchmark-lab/benchmark/dataset/: github_loader.py  github_loader.pyi  golden_tasks.py  golden_tasks.pyi  loader.py  loader.pyi  swe_loader.py  swe_loader.pyi  swe_schema.py  swe_schema.pyi  versioning.py  versioning.pyi
ollama-benchmark-lab/benchmark/distributed/: ray_executor.py  ray_executor.pyi  safe_executor.py  safe_executor.pyi  worker_pool.py  worker_pool.pyi
ollama-benchmark-lab/benchmark/evaluation/: evaluator.py  evaluator.pyi
ollama-benchmark-lab/benchmark/experiments/: tracker.py  tracker.pyi
ollama-benchmark-lab/benchmark/leaderboard/: engine.py  engine.pyi
ollama-benchmark-lab/benchmark/llm/: client.py  client.pyi  context.py  context.pyi  engine.py  local_model_registry.py  local_model_registry.pyi  prompt_builder.py  prompt_builder.pyi
ollama-benchmark-lab/benchmark/patch/: engine.py  engine.pyi
ollama-benchmark-lab/benchmark/platform/: __init__.py  __init__.pyi  api.py  api.pyi
ollama-benchmark-lab/benchmark/registry/: run_registry.py  run_registry.pyi
ollama-benchmark-lab/cache/: execution_cache.py
ollama-benchmark-lab/dashboard/: dashboard.py  server.py
ollama-benchmark-lab/docker/: sandbox.Dockerfile
ollama-benchmark-lab/docker_local_backup/: sandbox.Dockerfile
ollama-benchmark-lab/results/: heartbeat.txt  state.jsonl
ollama-benchmark-lab/scripts/: preflight.py  run_replay.py
ollama-benchmark-lab/tasks_swe/: manifest.json  task_001.json  task_002.json  task_003.json
ollama-benchmark-lab/tasks_swe_v2/: manifest.json  task_001.json  task_002.json  task_003.json
ollama-benchmark-lab/tests/: conftest.py
(+109 files in other folders)
