[tool.poetry]
name = "ollama-benchmark-lab"
version = "0.1.0"
description = "Research-grade SWE-bench style local LLM evaluation system"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7"
rich = "^13.7"
tqdm = "^4.66"
numpy = "^2.0"
fastapi = "^0.110"
uvicorn = "^0.30"
psutil = "^5.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"