[tool.poetry]
name = "ollama-benchmark-lab"
version = "0.1.0"
description = "Local LLM benchmarking framework for Ollama models (PLAN/ACT/SWE-style evaluation)"
authors = ["sek <sek@local>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sek/ollama-benchmark-lab"
repository = "https://github.com/sek/ollama-benchmark-lab"
documentation = "https://ollama-benchmark-lab.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

packages = [
    { include = "benchmark" },
    { include = "autollama" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.0.0"
pandas = "^2.2.0"
tqdm = "^4.66.0"
pyyaml = "^6.0.0"
requests = "^2.31.0"
pydantic = "^2.8.0"
ray = "2.55.1"
protobuf = ">=4.25,<5"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
hypothesis = "^6.100.0"
ruff = "^0.6.0"
mypy = "^1.10.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"

[tool.poetry.scripts]
autollama = "autollama.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = ["tasks"]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true